--- a/application.properties
+++ b/application.properties
@@ -29,4 +29,4 @@ log4j.category.hibernate=ERROR
 log4j.category.httpclient=ERROR
 log4j.category.org.codehaus.groovy=WARN
 log4j.category.sun.reflect=WARN
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=DEBUG, stdout
